--- a/train/service_entry/cm_istio.yaml
+++ b/train/service_entry/cm_istio.yaml
@@ -1,16 +1,26 @@
 apiVersion: v1
 data:
-  mesh: "accessLogFile: /dev/stdout\ndefaultConfig:\n  discoveryAddress: istiod.istio-system.svc:15012\n
-    \ proxyMetadata:\n    DNS_AGENT: \"\"\n  tracing:\n    zipkin:\n      address:
-    zipkin.istio-system:9411\nenablePrometheusMerge: true\noutboundTrafficPolicy:
-    \n  mode: REGISTRY_ONLY\nrootNamespace: istio-system\ntrustDomain: cluster.local"
+  mesh: |-
+    accessLogFile: /dev/stdout
+    defaultConfig:
+      discoveryAddress: istiod.istio-system.svc:15012
+      proxyMetadata:
+        DNS_AGENT: ""
+      tracing:
+        zipkin:
+          address: zipkin.istio-system:9411
+    enablePrometheusMerge: true
+    outboundTrafficPolicy:
+      mode: REGISTRY_ONLY
+    rootNamespace: istio-system
+    trustDomain: cluster.local
   meshNetworks: 'networks: {}'
 kind: ConfigMap
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"v1","data":{"mesh":"accessLogFile: /dev/stdout\ndefaultConfig:\n  discoveryAddress: istiod.istio-system.svc:15012\n  proxyMetadata:\n    DNS_AGENT: \"\"\n  tracing:\n    zipkin:\n      address: zipkin.istio-system:9411\nenablePrometheusMerge: true\nrootNamespace: istio-system\ntrustDomain: cluster.local","meshNetworks":"networks: {}"},"kind":"ConfigMap","metadata":{"annotations":{},"labels":{"install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio.io/rev":"default","operator.istio.io/component":"Pilot","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.8.0","release":"istio"},"name":"istio","namespace":"istio-system"}}
-  creationTimestamp: "2020-11-25T10:59:57Z"
+  creationTimestamp: "2020-12-15T03:29:27Z"
   labels:
     install.operator.istio.io/owning-resource: unknown
     install.operator.istio.io/owning-resource-namespace: istio-system
@@ -19,39 +29,8 @@ metadata:
     operator.istio.io/managed: Reconcile
     operator.istio.io/version: 1.8.0
     release: istio
-  managedFields:
-  - apiVersion: v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:data:
-        .: {}
-        f:meshNetworks: {}
-      f:metadata:
-        f:annotations:
-          .: {}
-          f:kubectl.kubernetes.io/last-applied-configuration: {}
-        f:labels:
-          .: {}
-          f:install.operator.istio.io/owning-resource: {}
-          f:install.operator.istio.io/owning-resource-namespace: {}
-          f:istio.io/rev: {}
-          f:operator.istio.io/component: {}
-          f:operator.istio.io/managed: {}
-          f:operator.istio.io/version: {}
-          f:release: {}
-    manager: istioctl
-    operation: Update
-    time: "2020-11-25T10:59:57Z"
-  - apiVersion: v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:data:
-        f:mesh: {}
-    manager: kubectl-edit
-    operation: Update
-    time: "2020-12-08T07:33:11Z"
   name: istio
   namespace: istio-system
-  resourceVersion: "818220"
+  resourceVersion: "293256"
   selfLink: /api/v1/namespaces/istio-system/configmaps/istio
-  uid: 5405bb52-2da3-45b1-97fd-e46eac354edd
+  uid: 43b403b2-57a3-4623-b91c-244f705d83c9
